--- a/emails/email.html
+++ b/emails/email.html
@@ -12,15 +12,13 @@
     <!-- CSS Reset : BEGIN -->
     <style>
 
-        /* What it does: Remove spaces around the email design added by some email clients. */
-        /* Beware: It can remove the padding / margin and add a background color to the compose a reply window. */
         html,
 body {
     margin: 0 auto !important;
     padding: 0 !important;
     height: 100% !important;
     width: 100% !important;
-    background: #f1f1f1;
+    background: #F0E68C;
 }
 
 /* What it does: Stops email clients resizing small text. */
@@ -110,6 +108,7 @@ img.g-img + div {
         min-width: 414px !important;
     }
 }
+
     </style>
 
     <!-- CSS Reset : END -->
@@ -118,13 +117,13 @@ img.g-img + div {
     <style>
 
 	    .primary{
-	background: #17bebb;
+	background: #2f89fc;
 }
 .bg_white{
 	background: #ffffff;
 }
 .bg_light{
-	background: #f7fafa;
+	background: #fafafa;
 }
 .bg_black{
 	background: #000000;
@@ -138,12 +137,12 @@ img.g-img + div {
 
 /*BUTTON*/
 .btn{
-	padding: 10px 15px;
+	padding: 5px 15px;
 	display: inline-block;
 }
 .btn.btn-primary{
 	border-radius: 5px;
-	background: #17bebb;
+	background: #2f89fc;
 	color: #ffffff;
 }
 .btn.btn-white{
@@ -156,17 +155,6 @@ img.g-img + div {
 	background: transparent;
 	border: 1px solid #fff;
 	color: #fff;
-}
-.btn.btn-black-outline{
-	border-radius: 0px;
-	background: transparent;
-	border: 2px solid #000;
-	color: #000;
-	font-weight: 700;
-}
-.btn-custom{
-	color: rgba(0,0,0,.3);
-	text-decoration: underline;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -185,7 +173,7 @@ body{
 }
 
 a{
-	color: #17bebb;
+	color: #2f89fc;
 }
 
 table{
@@ -196,10 +184,25 @@ table{
 	margin: 0;
 }
 .logo h1 a{
-	color: #17bebb;
-	font-size: 24px;
+	color: #000000;
+	font-size: 20px;
 	font-weight: 700;
-	font-family: 'Work Sans', sans-serif;
+	text-transform: uppercase;
+	font-family: 'Poppins', sans-serif;
+}
+
+.navigation{
+	padding: 0;
+}
+.navigation li{
+	list-style: none;
+	display: inline-block;;
+	margin-left: 5px;
+	font-size: 13px;
+	font-weight: 500;
+}
+.navigation li a{
+	color: rgba(0,0,0,.4);
 }
 
 /*HERO*/
@@ -213,59 +216,86 @@ table{
 }
 .hero .text h2{
 	color: #000;
-	font-size: 34px;
-	margin-bottom: 15px;
+	font-size: 30px;
+	margin-bottom: 0;
 	font-weight: 300;
-	line-height: 1.2;
-}
-.hero .text h3{
-	font-size: 24px;
-	font-weight: 200;
 }
 .hero .text h2 span{
 	font-weight: 600;
-	color: #000;
+	color: #2f89fc;
 }
 
 
-/*PRODUCT*/
-.product-entry{
-	display: block;
+/*HEADING SECTION*/
+.heading-section{
+}
+.heading-section h2{
+	color: #000000;
+	font-size: 28px;
+	margin-top: 0;
+	line-height: 1.4;
+	font-weight: 400;
+}
+.heading-section .subheading{
+	margin-bottom: 20px !important;
+	display: inline-block;
+	font-size: 13px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: rgba(0,0,0,.4);
 	position: relative;
-	float: left;
-	padding-top: 20px;
 }
-.product-entry .text{
-	width: calc(100% - 125px);
-	padding-left: 20px;
+.heading-section .subheading::after{
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: -10px;
+	content: '';
+	width: 100%;
+	height: 2px;
+	background: #2f89fc;
+	margin: 0 auto;
 }
-.product-entry .text h3{
-	margin-bottom: 0;
+
+.heading-section-white{
+	color: rgba(255,255,255,.8);
+}
+.heading-section-white h2{
+	font-family: 
+	line-height: 1;
 	padding-bottom: 0;
 }
-.product-entry .text p{
-	margin-top: 0;
+.heading-section-white h2{
+	color: #ffffff;
 }
-.product-entry img, .product-entry .text{
-	float: left;
+.heading-section-white .subheading{
+	margin-bottom: 0;
+	display: inline-block;
+	font-size: 13px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: rgba(255,255,255,.4);
 }
 
-ul.social{
-	padding: 0;
+/*PROJECT*/
+.text-project{
+	padding-top: 10px;
 }
-ul.social li{
-	display: inline-block;
-	margin-right: 10px;
+.text-project h3{
+	margin-bottom: 0;
+}
+.text-project h3 a{
+	color: #000;
 }
 
 /*FOOTER*/
 
 .footer{
-	border-top: 1px solid rgba(0,0,0,.05);
-	color: rgba(0,0,0,.5);
+	color: rgba(255,255,255,.5);
+
 }
 .footer .heading{
-	color: #000;
+	color: #ffffff;
 	font-size: 20px;
 }
 .footer ul{
@@ -277,7 +307,7 @@ ul.social li{
 	margin-bottom: 10px;
 }
 .footer ul li a{
-	color: rgba(0,0,0,1);
+	color: rgba(255,255,255,1);
 }
 
 
@@ -292,7 +322,7 @@ ul.social li{
 
 </head>
 
-<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #f1f1f1;">
+<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #222222;">
 	<center style="width: 100%; background-color: #f1f1f1;">
     <div style="display: none; font-size: 1px;max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
       &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
@@ -301,24 +331,24 @@ ul.social li{
     	<!-- BEGIN BODY -->
       <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
       	<tr>
-          <td valign="top" class="bg_white" style="padding: 1em 2.5em 0 2.5em;">
-          	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
+          <td valign="top" class="bg_white" style="padding: 1em 2.5em;">
+          	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%" margin-top="4rem">
           		<tr>
-          			<td class="logo" style="text-align: left;">
-			            <h1><a href="#">Shop</a></h1>
+          			<td class="logo" style="text-align: center;">
+			            <h1><a href="#">GLUMCI U ZAGVOZDU</a></h1>
 			          </td>
           		</tr>
           	</table>
           </td>
 	      </tr><!-- end tr -->
 				<tr>
-          <td valign="middle" class="hero bg_white" style="padding: 2em 0 2em 0;">
-            <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
+          <td valign="middle" class="hero hero-2 bg_white" style="padding: 4em 0;">
+            <table>
             	<tr>
-            		<td style="padding: 0 2.5em; text-align: left;">
-            			<div class="text">
-            				<h2>Ronald your shopping cart misses you</h2>
-            				<h3>Amazing deals, updates, interesting news right in your inbox</h3>
+            		<td>
+            			<div class="text" style="padding: 0 3em; text-align: center;">
+							<h2>Zahvaljuljemo na Vašoj kupnji!</h2>
+							<h3>NARUDZBA BR. 1231231</h3>
             			</div>
             		</td>
             	</tr>
@@ -326,61 +356,34 @@ ul.social li{
           </td>
 	      </tr><!-- end tr -->
 	      <tr>
-	      	<table class="bg_white" role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
-	      		<tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-					    <th width="80%" style="text-align:left; padding: 0 2.5em; color: #000; padding-bottom: 20px">Item</th>
-					    <th width="20%" style="text-align:right; padding: 0 2.5em; color: #000; padding-bottom: 20px">Price</th>
-					  </tr>
-					  <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-					  	<td valign="middle" width="80%" style="text-align:left; padding: 0 2.5em;">
-					  		<div class="product-entry">
-					  			<img src="images/prod-1.jpg" alt="" style="width: 100px; max-width: 600px; height: auto; margin-bottom: 20px; display: block;">
-					  			<div class="text">
-					  				<h3>Analog Wrest Watch</h3>
-					  				<span>Small</span>
-					  				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					  			</div>
-					  		</div>
-					  	</td>
-					  	<td valign="middle" width="20%" style="text-align:left; padding: 0 2.5em;">
-					  		<span class="price" style="color: #000; font-size: 20px;">$120</span>
-					  	</td>
-					  </tr>
-					  <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-					  	<td valign="middle" width="80%" style="text-align:left; padding: 0 2.5em;">
-					  		<div class="product-entry">
-					  			<img src="images/prod-2.jpg" alt="" style="width: 100px; max-width: 600px; height: auto; margin-bottom: 20px; display: block;">
-					  			<div class="text">
-					  				<h3>Analog Wrest Watch</h3>
-					  				<span>Small</span>
-					  				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					  			</div>
-					  		</div>
-					  	</td>
-					  	<td valign="middle" width="20%" style="text-align:left; padding: 0 2.5em;">
-					  		<span class="price" style="color: #000; font-size: 20px;">$120</span>
-					  	</td>
-					  </tr>
-					  <tr>
-					  	<td valign="middle" style="text-align:left; padding: 1em 2.5em;">
-					  		<p><a href="#" class="btn btn-primary">Continur your order</a></p>
-					  	</td>
-					  </tr>
-	      	</table>
-	      </tr><!-- end tr -->
+		      <td class="bg_white">
+		        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+		          <tr>
+		            <td class="bg_white email-section">
+		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
+		              	<h2>ISPORUKA</h2>
+		              	<p>Procjenjeno vrijeme dostave 3 do 7 radnih dana.</p>
+						</div>						
+		            </td>
+		          </tr><!-- end: tr -->
+
+		        </table>
+
+		      </td>
+		    </tr><!-- end:tr -->
       <!-- 1 Column Text + Button : END -->
       </table>
       <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
       	<tr>
-          <td valign="middle" class="bg_light footer email-section">
+          <td valign="middle" class="bg_black footer email-section">
             <table>
             	<tr>
                 <td valign="top" width="33.333%" style="padding-top: 20px;">
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                     <tr>
                       <td style="text-align: left; padding-right: 10px;">
-                      	<h3 class="heading">About</h3>
-                      	<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                      	<h3 class="heading">O NAMA</h3>
+                      	<p>Kulturna udruga GLUMCI U ZAGVOZDU</p>
                       </td>
                     </tr>
                   </table>
@@ -391,8 +394,8 @@ ul.social li{
                       <td style="text-align: left; padding-left: 5px; padding-right: 5px;">
                       	<h3 class="heading">Contact Info</h3>
                       	<ul>
-					                <li><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-					                <li><span class="text">+2 392 3929 210</span></a></li>
+					                <li><span class="text">TRG GLUMACA 1, Zagvozd, 21270</span></li>
+					                <li><span class="text"><a href="#">glumcizagvozd@gmail.com</span></a></li>
 					              </ul>
                       </td>
                     </tr>
@@ -402,12 +405,12 @@ ul.social li{
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                     <tr>
                       <td style="text-align: left; padding-left: 10px;">
-                      	<h3 class="heading">Useful Links</h3>
+                      	<h3 class="heading">Link</h3>
                       	<ul>
 					                <li><a href="#">Home</a></li>
-					                <li><a href="#">Account</a></li>
-					                <li><a href="#">Wishlist</a></li>
-					                <li><a href="#">Order</a></li>
+					                <li><a href="#">About</a></li>
+					                <li><a href="#">Services</a></li>
+					                <li><a href="#">Work</a></li>
 					              </ul>
                       </td>
                     </tr>
@@ -418,9 +421,30 @@ ul.social li{
           </td>
         </tr><!-- end: tr -->
         <tr>
-          <td class="bg_white" style="text-align: center;">
-          	<p>No longer want to receive these email? You can <a href="#" style="color: rgba(0,0,0,.8);">Unsubscribe here</a></p>
-          </td>
+        	<td valign="middle" class="bg_black footer email-section">
+        		<table>
+            	<tr>
+                <td valign="top" width="33.333%">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                    <tr>
+                      <td style="text-align: left; padding-right: 10px;">
+                      	<p>&copy; 2020 Kulturna udruga "Glumci u Zagvozdu"</p>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+                <td valign="top" width="33.333%">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                    <tr>
+                      <td style="text-align: right; padding-left: 5px; padding-right: 5px;">
+                      	<p><a href="#" style="color: rgba(255,255,255,.4);">Unsubcribe</a></p>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+        	</td>
         </tr>
       </table>
 
